syntax = "proto3";
package service;
option java_package = "org.qmstr.grpc.service";

import weak "qmstr/service/datamodel.proto";

message BuildResponse {
  bool success = 1;
}

message PushFileMessage {
  string name = 1;
  string hash = 2;
  bytes data = 3;
}

message PushFileResponse {
  string path = 1;
}

service BuildService {
  rpc Build(stream FileNode) returns (BuildResponse) {}
  rpc SendBuildError(InfoNode) returns (BuildResponse) {}
  rpc PushFile(PushFileMessage) returns (PushFileResponse) {}
}